# Pong

./: .gitignore  CMakeLists.txt  Defines.h  Game.cpp  Game.h  Pong.sln  Pong.vcxproj  Pong.vcxproj.filters  README.md  main.cpp
Game/: CMakeLists.txt  main.cpp
Project/: CMakeLists.txt
Project/includes/: Defines.h
Project/src/: Game.cpp
